gfx/2d/DrawTargetSkia.cpp
@@ -355,6 +355,10 @@ DrawTargetSkia::DrawSurface(SourceSurface *aSurface,
                             const DrawSurfaceOptions &aSurfOptions,
                             const DrawOptions &aOptions)
 {
+  if (!(aSurface->GetType() == SURFACE_SKIA || aSurface->GetType() == SURFACE_DATA)) {
+    return;
+  }
+
   if (aSource.IsEmpty()) {
     return;
   }
